raw: update 1.20.6 DAY 8
Took 4 hours 10 minutes